[Modify] 예약 목록 조회 로직 수정