@@ -15,6 +15,7 @@ import org.example.unibooker.domain.user.model.entity.Users;
 
 import java.time.*;
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class ReservationDto {
 
@@ -104,36 +105,173 @@ public class ReservationDto {
     // ===================
     // 예약 목록 응답 DTO
     // ===================
+
+    // =============== 플랫폼 관리자 및 기업 관리자 용 ===============
     @Getter
     @Builder
-    @Schema(description = "예약 목록 조회 응답 정보")
+    @Schema(description = "관리자 예약 목록 조회 응답 정보")
     public static class ResponseList {
-        @Schema(description = "예약 목록")
-        private List<Response> reservations;
+        private List<Object> list;
 
-        public static ResponseList from(List<Reservations> entities) {
-            return ResponseList.builder()
-//                    .reservations(entities.stream().map(Response::from).toList())
+        public static ResponseList from(List<Reservations> entities, ServiceCategory serviceCategory) {
+            return switch(serviceCategory) {
+                case RESERVATION ->
+                        ResponseList.builder()
+                        .list(entities.stream().map(ReservationResponseListInfo::from).collect(Collectors.toList()))
+                        .build();
+                case SEAT ->
+                        ResponseList.builder()
+                        .list(entities.stream().map(SeatResponseListInfo::from).collect(Collectors.toList()))
+                        .build();
+                case EVENT ->
+                        ResponseList.builder()
+                        .list(entities.stream().map(EventResponseListInfo::from).collect(Collectors.toList()))
+                        .build();
+                default -> throw new BaseException(BaseResponseStatus.INVALID_SERVICE_CATEGORY);
+            };
+        }
+    }
+
+    @Getter
+    @Builder
+    @Schema(description = "관리자 예약 목록 조회 [예약형] 단일 응답 정보")
+    public static class ReservationResponseListInfo {
+
+        @Schema(description = "예약 번호")
+        private Long id;
+
+        @Schema(description = "예약자")
+        private String userName;
+
+        @Schema(description = "예약한 서비스 항목")
+        private String resourceName;
+
+        @Schema(description = "예약 시작 일시")
+        private LocalDateTime startDate;
+
+        @Schema(description = "예약 종료 일시")
+        private LocalDateTime endDate;
+
+        public static ReservationResponseListInfo from(Reservations entity) {
+            return ReservationResponseListInfo.builder()
+                    .id(entity.getId())
+                    .userName(entity.getUsers().getName())
+                    .resourceName(entity.getResources().getName())
+                    .startDate(entity.getStartDate())
+                    .endDate(entity.getEndDate())
                     .build();
         }
     }
 
-    public static class ReservationResponseListInfo {
-
-    }
-
+    @Getter
+    @Builder
+    @Schema(description = "관리자 예약 목록 조회 [좌석형] 단일 응답 정보")
     public static class SeatResponseListInfo {
-        private String resourceName;
-        private LocalDateTime startDate; // 시작 일시 2025-10-22T10:00:00
-        private LocalDateTime endDate; // 종료 일시 2025-10-22T11:00:00
-        private Integer headCount; // 예약한 인원 수
-        private Integer capacity; // 수용 인원
+
+        @Schema(description = "예약 번호")
+        private Long id;
+
+        @Schema(description = "예약자")
+        private String userName;
+
+        @Schema(description = "좌석 행")
+        private Integer row;
+
+        @Schema(description = "좌석 열")
+        private Integer col;
+
+        @Schema(description = "예약 시작 일시")
+        private LocalDateTime startDate;
+
+        @Schema(description = "예약 종료 일시")
+        private LocalDateTime endDate;
+
+
+        public static SeatResponseListInfo from(Reservations entity) {
+            return SeatResponseListInfo.builder()
+                    .id(entity.getId())
+                    .userName(entity.getUsers().getName())
+                    .row(entity.getRow())
+                    .col(entity.getCol())
+                    .startDate(entity.getStartDate())
+                    .endDate(entity.getEndDate())
+                    .build();
+        }
     }
 
+    @Getter
+    @Builder
+    @Schema(description = "관리자 예약 목록 조회 [신청형] 단일 응답 정보")
     public static class EventResponseListInfo {
-        private String resourceName;
-        private LocalDateTime startDate; // 신청 시작 일시 2025-10-22T00:00:00
-        private LocalDateTime endDate; // 신청 종료 일시 2025-11-01T00:00:00
+
+        @Schema(description = "예약 번호")
+        private Long id;
+
+        @Schema(description = "예약자")
+        private String userName;
+
+        @Schema(description = "이메일")
+        private String email;
+
+        @Schema(description = "신청일")
+        private LocalDateTime applicationDate;
+
+        @Schema(description = "신청 상태")
+        private ReservationStatus status;
+
+        public static EventResponseListInfo from(Reservations entity) {
+            return EventResponseListInfo.builder()
+                    .id(entity.getId())
+                    .userName(entity.getUsers().getName())
+                    .email(entity.getUsers().getEmail())
+                    .applicationDate(entity.getCreatedAt())
+                    .status(entity.getStatus())
+                    .build();
+        }
+    }
+
+    // =============== 일반 사용자용 ===============
+    @Getter
+    @SuperBuilder
+    @Schema(description = "일반 사용자 예약 목록 조회 단일 응답 정보")
+    public static class UserResponse extends Response {
+        @Schema(description = "예약 시작 일시", example = "2025-10-16T10:00:00")
+        private LocalDateTime startDate;
+
+        @Schema(description = "예약 종료 일시", example = "2025-10-16T11:00:00")
+        private LocalDateTime endDate;
+
+        @Schema(description = "서비스 카테고리", example = "RESERVATION/SEAT/EVENT")
+        private ServiceCategory serviceCategory;
+
+        public static UserResponse from(Reservations entity) {
+            return UserResponse.builder()
+                    .id(entity.getId())
+                    .status(entity.getStatus())
+                    .resourceGroupName(entity.getResources().getResourceGroup().getName())
+                    .resourceName(entity.getResources().getName())
+                    .createdAt(entity.getCreatedAt())
+                    .updatedAt(entity.getUpdatedAt())
+                    .deletedAt(entity.getDeletedAt())
+                    // 아래부터는 일반 사용자 예약 목록 조회용 정보
+                    .startDate(entity.getStartDate())
+                    .endDate(entity.getEndDate())
+                    .serviceCategory(entity.getResources().getResourceGroup().getCategory())
+                    .build();
+        }
+    }
+
+    @Getter
+    @Builder
+    @Schema(description = "일반 사용자 예약 목록 조회 응답 정보")
+    public static class UserResponseList {
+        List<UserResponse> reservations;
+
+        public static UserResponseList from(List<Reservations> entities) {
+            return UserResponseList.builder()
+                    .reservations(entities.stream().map(UserResponse::from).toList())
+                    .build();
+        }
     }
 
 
@@ -150,7 +288,7 @@ public class ReservationDto {
         @Schema(description = "예약자", example = "유현경")
         private String userName;
 
-        @Schema(description = "예약 상태", example = "CONFIRMED")
+        @Schema(description = "예약 상태", example = "CONFIRMED 및 CANCELED")
         private ReservationStatus status;
 
         @Schema(description = "예약한 서비스 항목의 서비스", example = "회의실")
@@ -167,23 +305,23 @@ public class ReservationDto {
 
         @Schema(description = "삭제일시")
         private LocalDateTime deletedAt;
-
-        @Schema(description = "리소스에 등록되어 있는 사용자 입력 커스텀 필드")
-        private List<CustomFieldDto.CustomFieldValueListRes> customFieldValues;
     }
 
     @Getter
     @SuperBuilder
     @Schema(description = "예약 상세 조회 [예약형] 응답 정보")
     public static class ReservationResponse extends Response {
-        @Schema(description = "시작 일시", example = "2025-10-16T10:00:00")
+        @Schema(description = "예약 시작 일시", example = "2025-10-16T10:00:00")
         private LocalDateTime startDate;
 
-        @Schema(description = "종료 일시", example = "2025-10-16T11:00:00")
+        @Schema(description = "예약 종료 일시", example = "2025-10-16T11:00:00")
         private LocalDateTime endDate;
 
         @Schema(description = "인원수")
         private Integer headCount;
+
+        @Schema(description = "예약할 때 작성한 사용자 입력 커스텀 필드 값")
+        private List<CustomFieldDto.CustomFieldValueListRes> customFieldValues;
 
         /** entity -> dto 로 변환 */
         public static ReservationResponse from(Reservations entity, List<CustomFieldDto.CustomFieldValueListRes> userCustomFieldValues) {
@@ -209,20 +347,23 @@ public class ReservationDto {
     @SuperBuilder
     @Schema(description = "예약 상세 조회 [좌석형] 응답 정보")
     public static class SeatResponse extends Response {
-        @Schema(description = "시작 일시", example = "2025-10-16T10:00:00")
+        @Schema(description = "예약 시작 일시", example = "2025-10-16T10:00:00")
         private LocalDateTime startDate;
 
-        @Schema(description = "종료 일시", example = "2025-10-16T11:00:00")
+        @Schema(description = "예약 종료 일시", example = "2025-10-16T11:00:00")
         private LocalDateTime endDate;
 
         @Schema(description = "인원수")
         private Integer headCount;
 
         @Schema(description = "좌석 행")
-        private Integer seatRow;
+        private Integer row;
 
         @Schema(description = "좌석 열")
-        private Integer seatCol;
+        private Integer col;
+
+        @Schema(description = "예약할 때 작성한 사용자 입력 커스텀 필드 값")
+        private List<CustomFieldDto.CustomFieldValueListRes> customFieldValues;
 
         public static SeatResponse from(Reservations entity, List<CustomFieldDto.CustomFieldValueListRes> userCustomFieldValues) {
             return SeatResponse.builder()
@@ -239,8 +380,8 @@ public class ReservationDto {
                     .startDate(entity.getStartDate())
                     .endDate(entity.getEndDate())
                     .headCount(entity.getAttendeeCount())
-                    .seatRow(entity.getRow())
-                    .seatCol(entity.getCol())
+                    .row(entity.getRow())
+                    .col(entity.getCol())
                     .build();
         }
     }
@@ -249,6 +390,10 @@ public class ReservationDto {
     @SuperBuilder
     @Schema(description = "예약 상세 조회 [신청형] 응답 정보")
     public static class EventResponse extends Response{
+
+        @Schema(description = "예약할 때 작성한 사용자 입력 커스텀 필드 값")
+        private List<CustomFieldDto.CustomFieldValueListRes> customFieldValues;
+
         public static EventResponse from(Reservations entity, List<CustomFieldDto.CustomFieldValueListRes> userCustomFieldValues) {
             return EventResponse.builder()
                     .id(entity.getId())
